# tcp2ws

./: .gitignore  Cargo.toml  README.md  build  nginx.md  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
.cargo/: config
assets/: config.json  index.html  main.js
src/: api.ts  index.html  index.tsx  lib.rs  main.rs  style.global.css
src/App/: ExitButton.tsx  ItemCard.tsx  ItemDialog.tsx  NewItem.tsx  TitleBar.tsx  index.tsx
src/client/: mod.rs
src/log/: mod.rs  time.rs
src/server/: mod.rs
src/tcp2ws/: api.rs  config.rs  mod.rs  route.rs  service.rs
src/types/: global.d.ts
