[package]
name = "tcp2ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.6.12", features = ["ws", "headers"] }
chrono = "0.4.26"
futures-util = "0.3.28"
once_cell = "1.17.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "*"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "cors"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.144"
